<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="btn_charge_green">#00b600</color>
    <color name="btn_charge_gray">#999999</color>
    <color name="aqua">#48AC4E</color>
    <string name="view_tag">view_tag</string>
    <string name="app_name">易通游戏</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_user">用户</string>
    <string name="btn_gift">礼包</string>
    <string name="btn_server">客服</string>
    <string name="btn_bbs">官网</string>
    <string name="title_user">用户中心</string>
    <string name="tv_gift">礼包</string>
    <string name="str_back">返回</string>
    <string name="str_alipay">支付宝</string>
	<string name="str_charge_center">充值中心</string>
	<string name="str_charge_username">充值账号 ：</string>
	<string name="str_charge_amount">充值金额 ：</string>
	<string name="str_charge_select_mode">请选择充值方式 :</string>
	<string name="str_charge_now">立即付款</string>
	<string name="str_charge_ptb_title">BT币充值</string>
	<string name="str_charge_ptb_balance">BT币余额：</string>
	<string name="str_refresh">刷新</string>
	<string name="str_customer_service">客服QQ :</string>
	<string name="str_customer_tel">客服热线：</string>
	<string name="str_login_in">正在登录</string>
	<string name="str_welcome_backe">欢迎回来</string>
	<string name="str_account_user">切换账号</string>
	<string name="str_user_login">用户登录</string>
	<string name="str_forget_psw">忘记密码？</string>
	<string name="str_game_goin">进入游戏</string>
	<string name="str_user_register">用户注册</string>
	<string name="str_one_register">一键注册</string>
	<string name="str_update">游戏更新</string>
	<string name="str_pleaseupdate">游戏存在最新版,请更新游戏</string>
	<string name="str_pay_method">支付方式：</string>
	<string name="str_orderid">订单编号：</string>
	<string name="str_pay_situation">支付结果：</string>
	<string name="str_pay_login">正在努力处理中</string>
	<string name="str_complete_register">完成注册</string>
	<string name="str_ensureupdate">确认更新</string>
	<string name="str_user_agreement">用户协议</string>
	<string name="str_back_login">返回登录</string>
	<string name="str_pay_prompt">亲，你还没有充值哦！</string>
	<string name="str_pay_success">支付成功</string>
	<string name="str_not_pay">未支付</string>
	<string name="str_pay_fail">支付失败</string>
</resources>
