<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >
    
    <include layout="@layout/ttw_cz_navigation"
             android:id="@+id/ic_top"
             android:layout_alignParentTop="true"
        />
    <FrameLayout 
        android:id="@+id/tl_nav" 
        android:layout_width="match_parent"
        android:layout_height="46dip"
        android:background="#ffffff"
        android:padding="4dip"
        android:layout_centerVertical="true"
        android:layout_below="@id/ic_top"
        >
          <View
            android:id="@+id/v_slider"     
            android:layout_width="60dip"
            android:layout_height="36dip"
            android:layout_gravity="top|left" 
            android:background="#ffffff"
            />
		    <TableLayout 
		        android:id="@+id/ll_order_status"
        		android:layout_height="match_parent"
        		android:layout_width="match_parent"
		        android:gravity="center_horizontal|center_vertical"
		        >
		        <TableRow
		            android:layout_height="match_parent"
        		    android:layout_width="match_parent"
		             >
		           <TextView 
		            android:id="@+id/tv_success"
		            android:layout_width="0dip"
            		android:layout_height="32dip"
		            android:text="@string/str_pay_success"
		            android:gravity="center_horizontal|center_vertical"
		            android:layout_weight="1"
		            android:textColor="#ff6905"
		            />
		            <TextView 
		             android:layout_width="1dp"
		             android:layout_height="32dp"
		             android:background="#efefef"
		             android:gravity="center"
		             />
		         <TextView 
		            android:id="@+id/tv_wait"
		            android:layout_toRightOf="@id/tv_success"
		            android:layout_width="0dip"
            		android:layout_height="32dip"
		            android:text="@string/str_not_pay"
		            android:gravity="center_horizontal|center_vertical"
		            android:layout_weight="1"
		            android:textColor="@android:color/black"
		            />
		          <TextView 
		             android:layout_width="1dp"
		             android:layout_height="32dp"
		             android:background="#efefef"
		             android:gravity="center"
		             />
		        <TextView 
		            android:id="@+id/tv_fail"
		            android:layout_toRightOf="@id/tv_wait"
		            android:layout_width="0dip"
		            android:layout_height="32dip"
		            android:text="@string/str_pay_fail"
		             android:layout_weight="1"
		           android:gravity="center_horizontal|center_vertical"
		            android:textColor="@android:color/black"
		            /></TableRow>
		    </TableLayout>
    </FrameLayout>
    <android.support.v4.view.ViewPager  
             android:layout_below="@id/tl_nav"  
	        android:id="@+id/viewPager"    
	        android:layout_width="match_parent"
	        android:background="#efefef"   
	        android:layout_height="match_parent" /> 
</RelativeLayout>
