<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#b0000000" >

    <RelativeLayout
        android:id="@id/rl_login"
        android:layout_width="fill_parent"
        android:layout_height="230dip"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/sdk_edit_two_bg"
        android:paddingBottom="10dip"
        android:paddingLeft="18dip"
        android:paddingRight="18dip" >

        <LinearLayout
            android:id="@id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:background="#ffffff"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="0.0px"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.0"
                android:src="@drawable/logo" />

            
            <ImageView
                android:id="@+id/iv_logo_official"
                android:layout_width="0.0px"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1.0"
                android:src="@drawable/logo_official"
                android:visibility="gone" />
            
            
            <TextView
                android:layout_width="1dip"
                android:layout_height="40dp"
                android:background="@color/gray5" />

            <TextView
                android:id="@id/tv_copy"
                android:layout_width="0.0px"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1.0"
                android:gravity="center|left"
                android:text="@string/str_update"
                android:textColor="@color/blues"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/ll_login_frame"
            android:layout_width="fill_parent"
            android:layout_height="81dp"
            android:layout_below="@id/ll_logo"
            android:background="@drawable/sdk_edit_two_bg"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/str_pleaseupdate" />

        </LinearLayout>

        <RelativeLayout
            android:id="@id/rl_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_login_frame"
            android:paddingBottom="10dip"
            android:paddingLeft="18dip"
            android:paddingRight="18dip" >

            <Button
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="40dip"
                android:layout_marginTop="10dp"
                android:background="@drawable/sdk_login_in"
                android:text="@string/str_ensureupdate"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>